add deploy command

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "scp -r ./build/* tatianar@84.201.148.137:/home/tatianar/movies-explorer-frontend"
   },
   "eslintConfig": {
     "extends": [
