--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "scp -r ./build/* tatianar@84.201.148.137:/home/tatianar/movies-explorer-frontend"
+    "deploy": "npm run build && scp -r ./build/* tatianar@84.201.148.137:/home/tatianar/movies-explorer-frontend"
   },
   "eslintConfig": {
     "extends": [
